--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,7 @@
 org.gradle.jvmargs=-Xmx4G
 android.useAndroidX=true
 android.enableJetifier=true
+systemProp.http.keepAlive=false
+systemProp.http.connectionTimeout=60000
+systemProp.http.readTimeout=60000
+
