--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   firebase_core: ^3.2.0
   modal_progress_hud_nsn: ^0.5.1
   fluttertoast: ^8.0.8
+  image_picker: ^1.1.1
+  firebase_database: ^11.0.4
+  firebase_storage: ^12.1.2
+  intl: ^0.19.0
 
 
 
